force-app/main/default/objects/PropertySafeguardEvent__e/PropertySafeguardEvent__e.object-meta.xml
<CustomObject>
    <label>PropertySafeguardEvent</label>
    <pluralLabel>PropertySafeGuardEvents</pluralLabel>
</CustomObject>