force-app/main/default/objects/PropertySafeguardEvent__e/fields/PSGE_DateTime__c.field-meta.xml
<CustomField>
    <fullName>PSGE_DateTime__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>PSGE_DateTime</label>
    <type>DateTime</type>
</CustomField>