force-app/main/default/objects/PropertySafeguardEvent__e/fields/PSGE_DeviceId__c.field-meta.xml
<CustomField>
    <fullName>PSGE_DeviceId__c</fullName>
    <label>PSGE_DeviceId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>